tests/ui/generic-associated-types/collectivity-regression.stderr
error: `T` does not live long enough
  --> $DIR/collectivity-regression.rs:13:5
   |
LL | /     || {
...  |
LL | |         let _x = x;
LL | |     };
   | |_____^
   |
note: due to a current limitation of the type system, this implies a `'static` lifetime
  --> $DIR/collectivity-regression.rs:11:16
   |
LL |     for<'a> T: Get<Value<'a> = ()>,
   |                ^^^^^^^^^^^^^^^^^^^
help: consider restricting the type parameter to the `'static` lifetime
   |
LL |     for<'a> T: Get<Value<'a> = ()> + 'static,
   |                                    +++++++++

error: aborting due to 1 previous error

